# echo

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  project_prompt.txt  tsconfig.json  vitest.config.ts
.cursor/rules/: agents-md-first.mdc  ship-it.mdc  token-guardrails.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  version-bump.yml
docs/: architecture.md  contributors.md  design.md  usage.md
examples/: demo-upload.txt  echo-feature-demo.workspace.json
scripts/: bump-version.mjs  compose-social-preview.py  crop-logo-to-square.ps1  crop-logo-to-square.py  inject-updater-endpoint.mjs  make-icon.mjs  requirements-images.txt  run-compose-social.mjs
src/: App.css  App.test.tsx  App.tsx  api.ts  defaultState.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: echo-core.toml  open-external-url.toml  secrets.toml
src-tauri/src/: http_client.rs  lib.rs  main.rs  persistence.rs  request_log.rs  secrets.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: AboutDialog.tsx  HtmlPreviewModal.tsx  ImportWorkspaceConfirmDialog.tsx  OrphanCredentialsDialog.tsx  RequestLogDialog.tsx  SecretsDialog.tsx  TreeInlineNameRow.tsx  TreeNodes.tsx  UpdatePrompt.tsx
src/lib/: collection.test.ts  collection.ts  expandForSend.test.ts  expandForSend.ts  importWorkspace.test.ts  importWorkspace.ts  migrateAppState.test.ts  migrateAppState.ts  requestRef.test.ts  requestRef.ts  responseFormat.test.ts  responseFormat.ts  scriptRunner.test.ts  scriptRunner.ts  secretPlaceholders.test.ts  secretPlaceholders.ts  secretStorageKey.test.ts  secretStorageKey.ts  secretSync.test.ts  secretSync.ts  treeDraft.test.ts  treeDraft.ts  treeNames.test.ts  treeNames.ts  updater.ts  updaterPolicy.test.ts  updaterPolicy.ts  variables.test.ts  variables.ts  (+3 more)
(+4 files in other folders)
