[package]
name = "echo"
version = "0.15.0"
description = "Echo API client"
edition = "2021"
license = "MIT"

[lib]
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "cookies", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
