[package]
name = "echo"
version = "0.17.1"
description = "Echo API client"
edition = "2021"
license = "MIT"

[lib]
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "cookies", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
# Native stores per platform; `keyring` v3 has no default store (otherwise uses in-RAM mock).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
